# myanimelist-mcp

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  NOTES.md  PLAN.md  README.md  pyproject.toml
.claude/: launch.json  settings.json
.claude/agents/: mal-mcp-reviewer.md
.claude/skills/add-mcp-tool/: SKILL.md
.claude/skills/cut-a-release/: SKILL.md
.claude/skills/rebuild-ui-bundle/: SKILL.md
.claude/skills/verify-mal-api-fact/: SKILL.md
.github/workflows/: publish.yml
src/mal_mcp/: __init__.py  __main__.py  mal_client.py  server.py  token_manager.py
src/mal_mcp/ui/: __init__.py
tests/: test_client.py  test_main.py  test_manga_helpers.py  test_schedule.py  test_stats.py  test_token_manager.py  test_ui.py
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  main.tsx
ui/src/components/: CountUp.tsx  CoverCard.tsx  EmptyState.tsx  EntryEditor.tsx  GenreChips.tsx  ProgressBar.tsx  RankDelta.tsx  ScoreRing.tsx  SkeletonGrid.tsx  StatusBadge.tsx  Toolbar.tsx
ui/src/dev/: devHost.ts  fixtures.ts
ui/src/lib/: format.ts  nav.tsx
ui/src/mcp/: bridge.ts  types.ts
ui/src/theme/: components.css  fonts.css  global.css  tokens.css  views.css
ui/src/views/: Dashboard.tsx  DetailHero.tsx  ListBrowser.tsx  Rankings.tsx  ScheduleView.tsx  SearchGrid.tsx  SeasonalGrid.tsx
