[project]
name = "mal-mcp"
version = "0.3.0"
description = "Stateless MyAnimeList MCP server (streamable-http), designed to run behind an Obot MCP gateway"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.4,<4",
    "httpx>=0.28",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mal_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
