[project]
name = "mal-mcp"
version = "0.4.3"
description = "Stateless MyAnimeList MCP server (streamable-http) with an MCP Apps UI, designed to run behind an Obot MCP gateway"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.4,<4",
    "httpx>=0.28",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The built UI bundle is gitignored but must ship in BOTH the sdist and the
# wheel (the default build path is sdist -> wheel, so wheel-only is not enough).
[tool.hatch.build]
artifacts = ["src/mal_mcp/ui/dist/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/mal_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
